# simple-image-tool

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
src/: app_state.rs  gallery.rs  main.rs  message_box.rs  sit_delegate.rs  sit_menu.rs
src/components/: gallery.rs  mod.rs
src/sit_image/: mod.rs
