[package]
name = "simple-image-tool"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid-shell = "0.7.0"
druid = { version = "0.7.0", git = "https://github.com/linebender/druid.git", features = ["image", "png", "jpeg"] }
log = "0.4.8"

piet-common = { version = "=0.4.1", features = ["png", "jpeg"] }

